refactor(agc): Remove /agc command entirely, clean up README, and correct test environment specs